--- a/app/views/hooks/_view_account_login_bottom.html.erb
+++ b/app/views/hooks/_view_account_login_bottom.html.erb
@@ -1,9 +1,9 @@
-<%= stylesheet_link_tag 'buttons', :plugin => 'redmine_oauth_dataporten' %>
+<%= stylesheet_link_tag 'buttons', :plugin => 'redmine_oauth_engine' %>
 
-<% if Setting.plugin_redmine_oauth_dataporten[:oauth_authentification] %>
-  <%= link_to oauth_dataporten_path(:back_url => back_url) do %>
+<% if Setting.plugin_redmine_oauth_engine[:oauth_authentification] %>
+  <%= link_to oauth_engine_path(:back_url => back_url) do %>
     <%= button_tag :class => 'button-login' do %>
-      <%= content_tag :div, l(:login_via_dataporten), :class => 'button-login-text' %>
+      <%= content_tag :div, l(:login_via_engine), :class => 'button-login-text' %>
     <% end %>
   <% end %>
 <% end %>
